# simpleFog

simple_fog/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  simple_fog
simple_fog/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
simple_fog/Debug/: simple_fog
simple_fog/Debug/data/: basic-fixed.vert  water.frag  water.vert
simple_fog/codeblocks/: CMakeCache.txt  Makefile  cmake_install.cmake  simple_fog.cbp
simple_fog/data/: basic-fixed.frag
simple_fog/simple_fog.build/Debug/ALL_BUILD.build/: Script-05DB1A92BA0B492A997ECE6F.sh  dgph  dgph~
simple_fog/simple_fog.build/Debug/ZERO_CHECK.build/: Script-6C247A53F0704AC38F244596.sh  dgph  dgph~
simple_fog/simple_fog.build/Debug/simple_fog.build/: dgph  dgph~
simple_fog/simple_fog.build/Debug/simple_fog.build/Objects-normal/x86_64/: example.d  example.dia  glew.d  main.d  main.dia  simple_fog.LinkFileList  targa.d  terrain.d  terrain.dia
simple_fog/simple_fog.xcodeproj/: project.pbxproj
simple_fog/simple_fog.xcodeproj/project.xcworkspace/xcuserdata/joshuadahl.xcuserdatad/: UserInterfaceState.xcuserstate
simple_fog/simple_fog.xcodeproj/xcuserdata/joshuadahl.xcuserdatad/xcschemes/: xcschememanagement.plist
simple_fog/src/: example.cpp  example.h  glslshader.h  glwindow.cpp  glwindow.h  glxwindow.h  main.cpp  terrain.cpp  terrain.h
simple_fog/vc++/: ALL_BUILD.vcproj  CMakeCache.txt  ZERO_CHECK.vcproj  cmake_install.cmake  simple_fog.sln  simple_fog.vcproj
